// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApiIcon: Component should render correctly 1`] = `
<apiIcon.svg
  style={
    Object {
      "height": "60px",
      "stroke": "#FFF",
      "width": "60px",
    }
  }
/>
`;

exports[`ApiIcon: Component should render with custom styles 1`] = `
<apiIcon.svg
  style={
    Object {
      "fill": "blue",
      "height": "60px",
      "stroke": "#FFF",
      "width": "60px",
    }
  }
/>
`;
